--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     },
     "peerDependencies": {
         "typescript": "^5"
+    },
+    "dependencies": {
+        "fs": "^0.0.1-security"
     }
 }
