--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "type": "module",
     "private": true,
     "scripts": {
-        "start": "bun run index.ts && bunx serve ./public -p 8888",
+        "start": "bun run index.ts",
         "dev": "bun run --watch index.ts",
         "format": "bun run prettier --write .",
         "lint": "eslint . --ext .ts",
